# alkahest

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TESTING.md  libflint-dev_2.8.4-2build1_amd64.deb  lsan.supp  pyproject.toml  pytest.ini  record.sh  risch.md  verify_int_coercion.py
.github/workflows/: alkahest-semver-check.yml  ci-cross.yml  (+8 more)
alkahest-core/: Cargo.toml  build.rs
alkahest-core/benches/: alkahest_bench.rs  symbolic_gpu_bench.rs
alkahest-core/examples/: cpu_jit_probe.rs  dump_ptx.rs
alkahest-core/src/: horner.rs  lib.rs  parse.rs  special.rs
alkahest-core/src/algebra/: mod.rs  noncommutative.rs
alkahest-core/src/ball/: mod.rs
alkahest-core/src/calculus/: asymptotic.rs  fps.rs  gruntz.rs  limits.rs  mod.rs  multilimit.rs  series.rs
alkahest-core/src/dae/: mod.rs
alkahest-core/src/diff/: diff_impl.rs  forward.rs  reverse.rs
alkahest-core/src/diffalg/: mod.rs
alkahest-core/src/errors/: codes.rs
alkahest-core/src/eval/: complex_f64.rs  mod.rs
alkahest-core/src/experimental/: merkle_pool.rs
alkahest-core/src/flint/: ffi.rs  integer.rs  mat.rs  mod.rs  mpoly.rs  nmod.rs  poly.rs
alkahest-core/src/ideal/: mod.rs  primary.rs
alkahest-core/src/integrate/: engine.rs  mod.rs
alkahest-core/src/integrate/algebraic/: alg_tower.rs  coates.rs  decompose.rs  elliptic.rs  elliptic_output.rs  find_order.rs  genus1_log.rs  genus_zero.rs  hermite_curve.rs  integral_basis.rs  jacobian_torsion.rs  mod.rs  parametrize.rs  poly_utils.rs  residues.rs  trager_log.rs  vanhoeij.rs
alkahest-core/src/integrate/risch/: alg_field.rs  alg_rde.rs  diff_field.rs  exp_algebraic.rs  exp_case.rs  k_rational_integrate.rs  log_case.rs  mod.rs  number_field.rs  poly_rde.rs  radical_ext.rs  radical_subst.rs  rational_integrate.rs  rational_rde.rs  simple_radical.rs  tower.rs  tower_field.rs  tower_integrate.rs
alkahest-core/src/jit/: cache.rs  cranelift_backend.rs  mod.rs
alkahest-core/src/kernel/: display.rs  eval_const.rs  eval_proptests.rs  expr.rs  expr_props.rs  mod.rs  pool.rs  pool_persist.rs  proptests.rs  subs.rs
alkahest-core/src/lattice/: lll.rs  mod.rs
alkahest-core/src/lean/: mod.rs
alkahest-core/src/logic/: mod.rs
alkahest-core/src/matrix/: eigen.rs  linear_algebra.rs  mod.rs  normal_form.rs  smith.rs  smith_poly.rs
alkahest-core/src/modular/: mod.rs
alkahest-core/src/number_theory/: mod.rs
alkahest-core/src/numeric/: mod.rs  pslq.rs
alkahest-core/src/ode/: dsolve.rs  mod.rs  numeric.rs  series_solve.rs
alkahest-core/src/ode/dsolve/: constant_coeff.rs  first_order.rs  tests.rs  verify.rs
alkahest-core/src/ode/series_solve/: tests.rs
alkahest-core/src/pattern/: matcher.rs  mod.rs
alkahest-core/src/plot/: dot.rs  mod.rs  svg.rs
alkahest-core/src/poly/: cancel.rs  error.rs  gauss.rs  interp.rs  mod.rs  multipoly.rs  partial_fractions.rs  puiseux.rs  rational.rs  real_roots.rs  residue.rs  resultant.rs  unipoly.rs
alkahest-core/src/poly/factor/: mod.rs
alkahest-core/src/poly/groebner/: buchberger.rs  cuda.rs  f4.rs  f5.rs  fglm.rs  ideal.rs  mod.rs  monomial_order.rs  reduce.rs
alkahest-core/src/primitive/: mod.rs
alkahest-core/src/real/: cad.rs  mod.rs  routh.rs
alkahest-core/src/simplify/: assumptions.rs  colored_egraph.rs  discrimination_net.rs  egraph.rs  engine.rs  mod.rs  parallel.rs  proptests.rs  rules.rs  rulesets.rs
alkahest-core/src/solver/: diophantine.rs  homotopy.rs  mod.rs  polyhedral.rs  regular_chains.rs  transcendental.rs
alkahest-core/src/stablehlo/: mod.rs
alkahest-core/src/sum/: expr_ratio.rs  gosper.rs  mod.rs  poly_aux.rs  product.rs  ratfunc.rs  recurrence.rs  rsolve.rs
alkahest-core/src/transform/: fourier.rs  laplace.rs  mod.rs  ztransform.rs
alkahest-core/src/transform/fourier/: tests.rs
alkahest-core/src/transform/laplace/: tests.rs
alkahest-core/src/transform/ztransform/: tests.rs
alkahest-core/tests/: groebner_cuda.rs  nvptx_gpu.rs
alkahest-mlir/: Cargo.toml
alkahest-mlir/src/: emit.rs  lib.rs  lower.rs
alkahest-py/: Cargo.toml
alkahest-py/src/: lib.rs
alkahest-skill/: alkahest.md
benchmarks/: autogen_dir.py  bench_codspeed.py  bench_depth.py  cas_comparison.py  criterion_to_report.py  python_bench.py  tasks.py
demo-playground/: README.md  pnpm-lock.yaml
demos/: alkahest_panel.py
docs/: design.md  features.md  overview.md  symbolic-gpu-benchmarks.md
examples/: acausal_and_laplace.py  agent_workflow.py  apart_definite.py  ball_arithmetic.py  calculus.py  gpu_batch_eval.py  jit_eval.py  lean_certificates.py  library_tour.ipynb  noncommutative.py  ode_modeling.py  parallel_simplify.py  pattern_rewriting.py  phase3_polynomials.md  phase3_polynomials.py  products.py  risch_integration.py
fuzz/: Cargo.toml
lean/: lakefile.lean
python/alkahest/rl/envs/integration/: README.md  __init__.py  env.py  grammar.py  pyproject.toml  verifier.py
python/alkahest/rl/envs/integration/alkahest_symbolic_integration/: __init__.py
recipes/: verl_integration_reward.py
recordings/: groebner-cyclic5-1080p.webm
scripts/: vendor-egglog.sh
tests/: _step_logs.py  _tg_helpers.py  conftest.py  lean_corpus.py  lean_corpus_sample.py  smoke_readme.py  solver_corpus.py  test_agent_contract.py  test_algebraic_integration.py  test_alkahest_rl.py  test_apart.py  test_api.py  test_api_consistency_rough_edges.py  test_arcsin_quadratic_integration.py  test_assumptions.py  test_bugfixes_api.py  test_cad_decide.py  test_codegen_numeric_fuzz.py  test_complex_branchcut_oracle.py  test_complex_numeric_eval.py  test_complex_symbolics.py  test_definite_integral.py  test_diffalg_v213.py  test_diophantine_v219.py  test_egraph_constant_fold.py  test_eigen_v217.py  test_elliptic.py  test_elliptic_integrate.py  test_emit_c_transcendental.py  test_evaluate.py  test_experimental_calculus.py  test_gruntz_v217.py  test_homotopy_v214.py  test_inverse_function_powers.py  test_inverse_hyperbolic.py  test_inverse_trig_integration.py  test_limits_v216.py  test_linear_algebra.py  test_logic.py  test_modular.py  (+47 more)
website/: .gitignore
(+178 files in other folders)
