[workspace]
members = ["alkahest-core", "alkahest-mlir", "alkahest-py"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Alkahest Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
