[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "alkahest"
version = "2.0.0"
description = "A high-performance computer algebra system for Python"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alkahest Contributors" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/alkahest-cas/alkahest"
Documentation = "https://alkahest-cas.github.io/alkahest/"
Repository = "https://github.com/alkahest-cas/alkahest"
Issues = "https://github.com/alkahest-cas/alkahest/issues"

[tool.maturin]
python-source = "python"
manifest-path = "alkahest-py/Cargo.toml"
module-name = "alkahest"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
