[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "alkahest"
version = "3.4.0"
description = "A high-performance computer algebra system for Python"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alkahest Contributors" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
# verifiers requires Python >=3.10; keep alkahest core installable on 3.9 without rl.
rl = ["verifiers>=0.1.5; python_version>='3.10'", "datasets>=2.0"]
rl-integration = ["verifiers>=0.1.5; python_version>='3.10'", "datasets>=2.0"]

[project.urls]
Homepage = "https://github.com/alkahest-cas/alkahest"
Documentation = "https://alkahest-cas.github.io/alkahest/"
Repository = "https://github.com/alkahest-cas/alkahest"
Issues = "https://github.com/alkahest-cas/alkahest/issues"

[tool.maturin]
python-source = "python"
manifest-path = "alkahest-py/Cargo.toml"
module-name = "alkahest"
features = ["pyo3/extension-module"]

# ── Dev / CI dependencies ────────────────────────────────────────────────────
# Use `uv sync --no-install-project --group dev` to install.
# (--no-install-project skips building the Rust extension; use `maturin develop` for that.)
[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=7",
    "pytest-timeout",
    "hypothesis",
    "ruff>=0.15",
    "ty>=0.0.1",
]
# Extra oracle / comparison deps — pulled in CI nightly extras shard only.
ci-extras = [
    "sympy",
    "mpmath",
    "symengine",
    "wolframclient",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "PT", "TCH", "C4"]
# RUF001/002/003: math library intentionally uses unicode symbols (ℤ, ℚ, ×, –)
# PT011/B017: pytest.raises without match= is acceptable while test suite matures;
#             tests that care about message content already use exc_info.value checks.
ignore = ["RUF001", "RUF002", "RUF003", "PT011", "B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── ty (type checker) ────────────────────────────────────────────────────────
# src is passed explicitly on the CLI: `ty check python/alkahest/`
[tool.ty.environment]
python-version = "3.9"

[tool.ty.rules]
# numpy and jax are optional runtime deps not present in the lean dev venv;
# the compiled Rust extension (.alkahest) is resolved via the alkahest.pyi stub.
# Downgrade to "warn" so CI is not blocked by missing optional third-party packages.
unresolved-import = "warn"
