[package]
name = "alkahest-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "alkahest"
crate-type = ["cdylib"]

[features]
egraph = ["alkahest-core/egraph"]
numpy = ["dep:numpy"]
parallel = ["alkahest-core/parallel"]
groebner = ["alkahest-core/groebner"]
groebner-cuda = ["alkahest-core/groebner-cuda"]
cuda = ["alkahest-core/cuda"]

[dependencies]
alkahest-core = { path = "../alkahest-core" }
pyo3.workspace = true
numpy = { version = "0.21", optional = true }
rug = { version = "1", features = ["integer", "rational"] }

[dev-dependencies]
