[project]
name = "alkahest-symbolic-integration"
version = "0.1.1"
description = "Symbolic integration RL environment backed by the Risch algorithm"
readme = "README.md"
requires-python = ">=3.10"
tags = ["math", "reasoning", "single-turn", "train", "eval", "symbolic"]
dependencies = [
    "verifiers>=0.1.5",
    "alkahest>=3.3.0",
    "datasets>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alkahest_symbolic_integration"]

[tool.verifiers]
tags = ["math", "reasoning", "single-turn", "train", "eval", "symbolic"]
entrypoint = "alkahest_symbolic_integration:load_environment"

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 3
